search functionality implemented
